samples/_failures_safe/1761296233_0c24ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7b8cc5c.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_a7b8cc5c.c:142:20: error: expected ‘;’ at end of input
  142 |                 sum
      |                    ^
      |                    ;
./samples/SAFE/__tmp_a7b8cc5c.c:142:17: error: expected declaration or statement at end of input
  142 |                 sum
      |                 ^~~
./samples/SAFE/__tmp_a7b8cc5c.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7b8cc5c.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7b8cc5c.c:142:17: error: expected declaration or statement at end of input
